# hdx-scraper-pcodes

./: .gitignore  LICENSE  README.md  errors.txt  get_pcodes.py  global_pcodes.csv  hatch.toml  pcodes.py  pyproject.toml  requirements-test.txt  requirements.txt  ruff.toml  run.py
.config/: coveragerc  pre-commit-config.yaml  ruff.toml
.github/workflows/: publish.yaml  run-python-script.yaml  run-python-script.yml  run-python-tests.yaml  run-python-tests.yml
config/: project_configuration.yaml  project_configuration.yml
src/hdx/scraper/pcodes/: __main__.py  pcodes.py
src/hdx/scraper/pcodes/config/: hdx_dataset_static.yaml  project_configuration.yaml
tests/: conftest.py  test_pcodes.py
tests/fixtures/: afg_pcodes.csv  arm_pcodes.csv  cod-ab-som.json  global_pcode_lengths.csv  global_pcodes.csv  global_pcodes_adm_1_2.csv  idn_pcodes.csv  som_pcodes.csv
tests/fixtures/input/: dataset-cod-ab-afg.json  dataset-cod-ab-arm.json  dataset-cod-ab-bes.json  dataset-cod-ab-idn.json  dataset-cod-ab-mkd.json  dataset-global-pcodes.json  download-arm-gazetteer-2019.xlsx  download-global-pcodes.csv  download-mkd-admn.xls
